# caesium

./: .gitignore  Cargo.toml  README  README.md  cloudbuild.yaml  docker-compose.yml
benches/: quantile.rs  query.rs
caesium-cli/: Cargo.toml  Dockerfile
caesium-core/: Cargo.toml
caesium-core/benches/: quantile.rs
caesium-core/src/: lib.rs  protocol.rs
caesium-daemon/: Cargo.toml  Dockerfile
caesium-daemon/src/: client.rs  command.rs  lib.rs  listener.rs  main.rs  processor.rs  sender.rs  state.rs  window.rs
caesium-load/: Cargo.toml  Dockerfile
caesium-load/src/: error.rs  lib.rs  main.rs  rate.rs  writer.rs
caesium-server/: Cargo.toml  Dockerfile
caesium-server/benches/: query.rs
caesium-server/src/: lib.rs  main.rs  server.rs
caesium-server/src/query/: error.rs  execute.rs  tests.rs
caesium-server/src/query/ops/: combine.rs  mod.rs
caesium-server/src/query/parser/: tokenize.rs
caesium-server/src/server/: read.rs  write.rs
caesium-server/src/storage/: datasource.rs  key.rs  mock.rs  store.rs  wildcard.rs
caesium-server/tests/: integration.rs
core/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: circuit.rs  lib.rs  listener.rs  main.rs  processor.rs
datasets/: generate.py
server/: Cargo.toml
server/benches/: query.rs
src/: lib.rs  quantile.rs  sampler.rs  time.rs
src/encode/: buffer.rs  encodable.rs  float.rs  int.rs  mod.rs  string.rs  vbyte.rs  vec.rs
src/network/: circuit.rs  client.rs  error.rs  message.rs  mod.rs  server.rs
src/parser/: ast.rs  mod.rs  parse.rs  tokenize.rs
src/quantile/: block.rs  builder.rs  compactor.rs  constants.rs  error.rs  mergable.rs  merge.rs  minmax.rs  mod.rs  query.rs  readable.rs  sampler.rs  serializable.rs  sketch.rs  tests.rs  writable.rs
src/query/: build.rs  error.rs  execute.rs  mod.rs  result.rs  tests.rs
tests/: run.sh
(+90 files in other folders)
