[package]
name = "caesium"
version = "0.1.0"
authors = ["Will Daly"]

[dependencies]
bencher = "0.1.5"
env_logger = "0.5.10"
log = "0.4"
rand = "0.4"
rocksdb = "0.10.0"
tokio = "0.1.7"
uuid = { version = "0.6", features = ["v4"] }

[[bench]]
name = "quantile"
harness = false

[[bench]]
name = "query"
harness = false

[profile.release]
debug = true
