[package]
name = "caesium-daemon"
version = "0.1.0"
authors = ["Will Daly"]

[dependencies]
caesium-core = { path = "../caesium-core" }
clap = "2.32.0"
lazy_static = "1.0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
regex = "1"
slab = "0.4"
stackdriver_logger = "0.3.0"

[features]
baseline = ["caesium-core/baseline"]
