[package]
name = "caesium-server"
version = "0.1.0"
authors = ["Will Daly"]

[dependencies]
bencher = "0.1.5"
bytes = "0.4.9"
caesium-core = { path = "../caesium-core" }
clap = "2.32.0"
lazy_static = "1.0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
mio = "0.6.15"
regex = "1"
rocksdb = "0.10.1"
slab = "0.4"
stackdriver_logger = "0.3.0"
uuid = { version = "0.6", features = ["v4"] }

[features]
baseline = ["caesium-core/baseline"]

[[bench]]
name = "query"
harness = false
